log-output/manifests/log-output/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-timestamps
          emptyDir: { }
        - name: log-output-cm
          configMap:
            name: log-output-cm
      containers:
        - name: log-output-writer
          image: 2kai/k8s-school-log-output-writer:3.02
          volumeMounts:
            - name: shared-timestamps
              mountPath: /opt/timestamps
        - name: log-output-reader
          image: 2kai/k8s-school-log-output-reader:3.02
          volumeMounts:
            - name: shared-timestamps
              mountPath: /opt/timestamps
            - name: log-output-cm
              mountPath: /opt/src/.env
              subPath: .env
