log-output/manifests/log-output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-reader-svc
  namespace: applications
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8091
