log-output/manifests/log-output/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ing
spec:
  rules:
    - http:
        paths:
          - path: /log-output
            pathType: Prefix
            backend:
              service:
                name: log-output-reader-svc
                port:
                  number: 2345
